--- a/frontend/portfolio/src/pages/Dashboard/User/UserDashboard.module.css
+++ b/frontend/portfolio/src/pages/Dashboard/User/UserDashboard.module.css
@@ -1,3 +1,11 @@
-#root{
-    display:flex;
-}
+.dashboard {
+    display: flex;
+    height: 100vh;
+  
+  }
+  
+  .mainContent {
+    flex-grow: 1;
+    padding: 20px;
+
+  }
