--- a/frontend/portfolio/src/pages/Dashboard/components/Sidebar.module.css
+++ b/frontend/portfolio/src/pages/Dashboard/components/Sidebar.module.css
@@ -1,8 +1,5 @@
 /* Sidebar Container */
 .sidebar {
-    position: fixed;
-    left: 0;
-    top: 0;
     height: 100vh;
     width: 240px;
     background-color: #ccc;
@@ -14,9 +11,10 @@
 
 /* Logo */
 .sidebarLogo img {
-    width: 150px;
+    width: 250px;
     display: block;
     margin: 0 auto 20px;
+    height:150px;
 }
 
 /* Menu */
@@ -32,7 +30,7 @@
     align-items: center;
     gap: 12px;
     padding: 10px;
-    color: var(--text-color);
+    color: black;
     text-decoration: none;
     font-size: 16px;
     transition: background-color 0.3s ease;
@@ -48,6 +46,12 @@
     background-color: rebeccapurple;
     color: white;
     font-weight: bold;
+    text-decoration:none;
+    display: flex;
+    align-items: center;
+    gap:12px;
+    padding: 10px;
+
 }
 
 /* Icon */
